Just applied some additional coverage mainly to ensure null checks and paths missed.